[fix] fixed nav width overflow

--- a/src/styles/nav.style.css
+++ b/src/styles/nav.style.css
@@ -1,6 +1,7 @@
 .nav-container {
   width: 100%;
-  padding: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
   display: flex;
   flex-direction: row;
